2000-11-03  John Harper  <jsh@eazel.com>

	* sawfish/wm/state/maximize.jl: immediately before exiting
	unmaximize all maximized windows. But be careful not to reflect
	this change in their properties (either wm-local or in the X
	server). Fixes #4336

	* sawfish/wm/state/wm-spec.jl (wm-spec-init): changed
	_NET_SUPPORTING_WM_CHECK properties to type 'WINDOW. Also set
	_NET_WM_NAME property on the identifying client window

2000-11-02  John Harper  <jsh@eazel.com>

	* sawfish/wm/ext/auto-raise.jl (rw-on-focus, rw-out-focus):
	only do anything if (eq MODE 'normal); fixes #15526 in Red Hat
	bugzilla. Not totally sure that this doesn't break anything,
	but it's easily revertable if it does..

	* sawfish/wm/frames.jl (frame-class-removed-p): new function

	* sawfish/wm/state/maximize.jl (check-if-maximizable,
	property-notify): new functions, added to add-window-hook and
	property-notify-hook respectively. When WM_NORMAL_HINTS changes
	in any way, check if the window is maximizable or not; then
	hide (or reshow) the maximize button as necessary. Fixes #4260

2000-11-01  John Harper  <jsh@eazel.com>

	* sawfish/wm.jl: load sawfish.wm.state.maximize at startup,
	since it adds things to hooks

	* sawfish/wm/ext/edge-flip.jl (before-edge-flip-hook,
	after-edge-flip-hook): new hooks

	(before-flip, after-flip, edge-flip-while-moving): edge
	flipping while dragging windows now obeys the edge-flip-delay
	setting

2000-10-31  John Harper  <jsh@eazel.com>

	* sawfish/wm/state/maximize.jl: added a function to the
	after-window-hook that checks for `queued-{vertical,horizontal}-
	maximize' properties on windows. When found the window is
	maximized. This gets around the problem of not being able to
	maximize a window before it's been framed

	* sawfish/wm/state/wm-spec.jl, sawfish/wm/state/gnome.jl: set
	queued maximize properties if a newly-created window needs to
	be maximize

	* sawfish/wm/state/gnome.jl: now understands
	WIN_HINTS_DO_NOT_COVER flag to be the same as the `avoid'